gccida/g1/get_inner_reference
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_inner_reference/src/expr.c:5712:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode *pmode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_inner_reference/src/expr.c:5717:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v8; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_inner_reference/src/expr.c:5718:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v9; // r12 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_inner_reference/src/expr.c:5723:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *imag; // r13 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_inner_reference/src/expr.c:5727:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v18; // r13 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_inner_reference/src/expr.c:5728:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v19; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_inner_reference/src/expr.c:5729:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v20; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_inner_reference/src/expr.c:5730:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v21; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_inner_reference/src/expr.c:5731:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v22; // r13 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_inner_reference/src/expr.c:5736:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v28; // rcx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_inner_reference/src/expr.c:5738:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v30; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_inner_reference/src/expr.c:5739:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v31; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_inner_reference/src/expr.c:5740:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v32; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_inner_reference/src/expr.c:5743:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+14h] [rbp-64h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_inner_reference/src/expr.c:5747:19: error: expected expression
v8 = ( tree_node *)*( &global_trees + 15); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_inner_reference/src/expr.c:5747:8: error: use of undeclared identifier 'tree_node'
v8 = ( tree_node *)*( &global_trees + 15); 
       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_inner_reference/src/expr.c:5748:19: error: expected expression
v9 = ( tree_node *)*( &global_trees + 17); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_inner_reference/src/expr.c:5748:8: error: use of undeclared identifier 'tree_node'
v9 = ( tree_node *)*( &global_trees + 17); 
       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_inner_reference/src/expr.c:5754:23: error: expected expression
imag = *( tree_node **)( high + 40); 
                      ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_inner_reference/src/obj/expr.o] Error 1
